Actualizar gecko y quitar página de inicio que no aportaba nada
Mostrar directamente la lista de paquetes con sus entidades y consultas.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -21,7 +21,7 @@
 		
 		{
 			"label": "start", "detail": "Ejecutar pargocode",
-			"command": "pargocode -dir ../../holamundo",
+			"command": "pargocode -src=$(realpath .) -dir ../../holamundo",
 			"type": "shell", "presentation": { "echo": false, "reveal": "always", "focus": false, "panel": "shared", "showReuseMessage": false, "clear": false },
 			"isBackground": true,
 			"dependsOrder": "sequence", "dependsOn": ["install"]
