--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,7 +8,7 @@
 		},
 		{
 			"label": "Install", "detail": "Ejecutar en ambiente de desarrollo",
-			"command": "CGO_ENABLED=0 go install -ldflags \"-X main.BUILD_INFO=campus:$(date '+%Y-%m-%d%n'):$(git rev-parse --short HEAD) -X main.AMBIENTE=PROD\"; echo 'Instalado ºuº)/'",
+			"command": "CGO_ENABLED=0 go install -ldflags \"-X main.BUILD_INFO=campus:$(date '+%Y-%m-%d%n'):$(git rev-parse --short HEAD) -X main.AMBIENTE=PROD\" ./pargocode && echo 'Instalado ºuº)/'",
 			"type": "shell", "presentation": { "echo": false, "reveal": "always", "focus": false, "showReuseMessage": false }, "isBackground": true,
 		},
 		{
